fix: missing spacing utility function

--- a/src/scss/_utilities.spacing.scss
+++ b/src/scss/_utilities.spacing.scss
@@ -7,6 +7,39 @@
 // vrt = Vertical. top and bottom will have the same value.
 // hrz = Horizontal. right and left will have the same value.
 
+// Turn a string into a number
+// https://hugogiraudel.com/2014/01/15/sass-string-to-number/
+@function number($value) {
+  @if type-of($value) == 'number' {
+    @return $value;
+  }
+
+  $result: 0;
+  $digits: 0;
+  $minus: str-slice($value, 1, 1) == '-';
+  $numbers: ('0': 0, '1': 1, '2': 2, '3': 3, '4': 4, '5': 5, '6': 6, '7': 7, '8': 8, '9': 9);
+
+  @for $i from if($minus, 2, 1) through str-length($value) {
+    $character: str-slice($value, $i, $i);
+
+    @if not (index(map-keys($numbers), $character) or $character == '.') {
+      @return to-length(if($minus, -$result, $result), str-slice($value, $i))
+    }
+
+    @if $character == '.' {
+      $digits: 1;
+    } @else if $digits == 0 {
+      $result: $result * 10 + map-get($numbers, $character);
+    } @else {
+      $digits: $digits * 10;
+      $result: $result + map-get($numbers, $character) / $digits;
+    }
+  }
+
+  @return if($minus, -$result, $result);;
+}
+
+
 $limit: 4;
 
 @for $i from 0 through $limit {
